--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -9,6 +9,10 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <style>
+        .navbar {
+            display: block;
+        }
+
         html, body {
             height: 100%;
             margin: 0;
