some minor cleaning up

--- a/ImpactMap/Views/Home/Index.cshtml
+++ b/ImpactMap/Views/Home/Index.cshtml
@@ -6,9 +6,10 @@
     <style>
         #map {
             height: 400px;
-            width: 75%;
+            width: 100%;
         }
     </style>
+</head>
 
     <div class="jumbotron">
         <h1>IMPACTMAP</h1>
