some minor cleaning up on css

--- a/ImpactMap/Views/Home/Index.cshtml
+++ b/ImpactMap/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
         <p class="lead">WELCAME TO OUR PROJECT ;)</p>
     </div>
 
-    <div id="register" class="alert-danger" onclick="getRegister()">
+    @*<div id="register" class="alert-danger" onclick="getRegister()">
         Register
     </div>
     <div id="login" class="alert-danger" onclick="getLogin()">
         Login
-    </div>
+    </div>*@
 
     <div id="resultDiv"></div>
 
