--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -31,7 +31,11 @@
         </th>
     </tr>
 
-    @foreach (var item in Model)
+
+@if (Model != null)
+{
+   
+    foreach (var item in Model)
     {
         <tr>
             <td>
@@ -85,6 +89,6 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
-                    }
 
-</table>
+    }
+}
