--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -8,77 +8,46 @@
 
 <div class="addpadding">
     <dt class="dl-horizontal">
-    <dt>
-        @Html.DisplayNameFor(model => model.name)
-    </dt>
 
-    <dd>
-        @Html.DisplayFor(model => model.name)
-    </dd>
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
 
-    <dt>
-        @Html.DisplayNameFor(model => model.description)
-    </dt>
+        <dd>
+            @Html.DisplayFor(model => model.description)
+        </dd>
 
-    <dd>
-        @Html.DisplayFor(model => model.description)
-    </dd>
+        <dd>
+            @Html.DisplayFor(model => model.address1)
+        </dd>
 
-    <dt>
-        @Html.DisplayNameFor(model => model.address1)
-    </dt>
+        <dd>
+            @Html.DisplayFor(model => model.address2)
+        </dd>
 
-    <dd>
-        @Html.DisplayFor(model => model.address1)
-    </dd>
+        <dd>
+            @Html.DisplayFor(model => model.city)
+        </dd>
 
-    <dt>
-        @Html.DisplayNameFor(model => model.address2)
-    </dt>
+        <dd>
+            @Html.DisplayFor(model => model.state)
+        </dd>
 
-    <dd>
-        @Html.DisplayFor(model => model.address2)
-    </dd>
+        <dd>
+            @Html.DisplayFor(model => model.zip)
+        </dd>
 
-    <dt>
-        @Html.DisplayNameFor(model => model.city)
-    </dt>
+        <dd>
+            @Html.DisplayFor(model => model.lat)
+        </dd>
 
-    <dd>
-        @Html.DisplayFor(model => model.city)
-    </dd>
+        @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "btn btn-primary" })
 
-    <dt>
-        @Html.DisplayNameFor(model => model.state)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.state)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.zip)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.zip)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.lat)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.lat)
-    </dd>
-
-    @Html.ActionLink("Edit", "Edit", "Entity", "Entity", new { @class = "btn btn-primary" })
-
-    @*@Html.ActionLink("Edit", "Edit", new { id = model.ID })*@
+        @*@Html.ActionLink("Edit", "Edit", new { id = model.ID })*@
 
 </div>
 
-    <h2>Investments Sent</h2>
+<h2>Investments Sent</h2>
 
 <div class="addpadding">
 
@@ -86,116 +55,143 @@
 
     @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "btn btn-primary" })
 
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.amount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.entityTo.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.categories)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.projectTo.report)
-            </th>
-        </tr>
+    @if (Model.investmentsOut != null)
+    {
 
-        @if (Model.Investments != null)
-        {
-            foreach (var item in Model.Investments)
-            {
+        <table class="table">
+            <tr>
+                <th>
+                    Investment Date
+                </th>
+                <th>
+                    Value
+                </th>
+                <th>
+                    Recipient
+                </th>
+                <th>
+                    Reports
+                </th>
+            </tr>
 
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.date)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.amount)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.entityTo.name)
-                    </td>
-                    <td>
-                        @foreach (var thing in item.categories)
-                        {
-                            @Html.DisplayFor(modelItem => thing.name)
-                            <br />
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.projectTo.report)
-                    </td>
-                </tr>
-            }
-        }
+            @*Displays each investment in the table*@
+            @{foreach (var item in Model.investmentsOut)
+                {
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.date)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.entityTo.name)
+                        </td>
+                        <td>
+                            @{  if (item.projectTo.report != null)
+                                {
+                                    string reportID = Convert.ToString(item.projectTo.report.ID);
+                                    @Html.ActionLink("Report", reportID, "Details", "Report")
+                                }
+                                else
+                                {
+                                    <span>No report available.</span>
+                                }
+                            }
+                        </td>
+                    </tr>
+                                    }
+                                }
+
+
     </table>
-</div>
-    <h2>My Projects</h2>
 
-<div class="addpadding">
-
-
-    @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "btn btn-primary" })
-
-    @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "btn btn-primary" })
-
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Project.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.date)
-            </th>
-            <th>
-                Donating @Html.DisplayNameFor(model => model.Investment.entityFrom.name) (s)<br />
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.amount)
-                (s)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Investment.projectTo.report)
-            </th>
-        </tr>
+                                }
+                                else
+                                {
+                                    <p>No Investment Available</p>
+                                }
 
 
-        @if (Model.Projects != null)
-        {
-            foreach (var item in Model.Projects)
-            {
+
+
+
+
+
+
+        </div>
+        <h2>My Projects</h2>
+
+        <div class="addpadding">
+
+
+            @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "btn btn-primary" })
+
+            @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "btn btn-primary" })
+
+            <table class="table">
+                <tr>
+                    <th>
+                        Project Name
+                    </th>
+                    <th>
+                        Value of Grant
+                    </th>
+                    <th>
+                        Grant Date
+                    </th>
+                    <th>
+                        Donor(s)
+                    </th>
+                    <th>
+                        Report
+                    </th>
+                </tr>
+
+
+                @if (Model.investmentsOut != null)
+                {
+                    foreach (var item in Model.projects)
+                    {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.name)
                     </td>
                     <td>
                         @foreach (var thing in item.investmentsIn)
-                    {
-                            @Html.DisplayFor(modelItem => thing.date)<br />
-                        }
+                        {
+                                @Html.DisplayFor(modelItem => thing.amount)<br />
+                                }
                     </td>
                     <td>
                         @foreach (var thing in item.investmentsIn)
-                    {
-                            @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
-                        }
+                        {
+                                @Html.DisplayFor(modelItem => thing.date)<br />
+                                }
                     </td>
                     <td>
                         @foreach (var thing in item.investmentsIn)
-                    {
-                            @Html.DisplayFor(modelItem => thing.amount)<br />
-                        }
+                        {
+                                @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
+                                }
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.report)
+                        @{  if (item.report != null)
+                                    {
+                                        string reportID = Convert.ToString(item.report.ID);
+
+                                @Html.ActionLink("View", reportID, "Details", "Report")
+                                    }
+                                    else
+                                    {
+                                        //Default create report page right now
+                                @Html.ActionLink("Create", "Create", "Report")
+                                    }
+                        }
                     </td>
                 </tr>
-            }
-        }
-    </table>
-</div>
+                                        }
+                                    }
+            </table>
+        </div>
