--- a/ImpactMap/Views/Manage/Index.cshtml
+++ b/ImpactMap/Views/Manage/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ImpactMap.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Account Management";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Change your settings.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>Password:</dt>
