no more welcame

--- a/ImpactMap/Views/Shared/_Map.cshtml
+++ b/ImpactMap/Views/Shared/_Map.cshtml
@@ -1,12 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
-
-
-<div id="map"></div>
+﻿<div id="map"></div>
 
 <script src="~/Scripts/googlemaps.js"></script>
 
