--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -101,16 +101,16 @@
                             }
                         </td>
                     </tr>
-                                    }
                                 }
+            }
 
 
-    </table>
+        </table>
 
                                 }
                                 else
                                 {
-                                    <p>No Investment Available</p>
+                                    <p>You Currently Have No Investments</p>
                                 }
 
 
@@ -120,82 +120,86 @@
 
 
 
-        </div>
-        <h2>My Projects</h2>
+</div>
+<h2>My Projects</h2>
 
-        <div class="addpadding">
+<div class="addpadding">
 
 
-            @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "btn btn-primary" })
+    @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "btn btn-primary" })
 
-            @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "btn btn-primary" })
+    @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "btn btn-primary" })
 
     @if (Model.projects.Count != 0)
     {
 
-            <table class="table">
-                <tr>
-                    <th>
-                        Project Name
-                    </th>
-                    <th>
-                        Value of Grant
-                    </th>
-                    <th>
-                        Grant Date
-                    </th>
-                    <th>
-                        Donor(s)
-                    </th>
-                    <th>
-                        Report
-                    </th>
-                </tr>
+        <table class="table">
+            <tr>
+                <th>
+                    Project Name
+                </th>
+                <th>
+                    Value of Grant
+                </th>
+                <th>
+                    Grant Date
+                </th>
+                <th>
+                    Donor(s)
+                </th>
+                <th>
+                    Report
+                </th>
+            </tr>
 
 
-                @if (Model.investmentsOut != null)
+            @if (Model.investmentsOut != null)
+            {
+                foreach (var item in Model.projects.Take(5))
                 {
-                    foreach (var item in Model.projects.Take(5))
-                    {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.name)
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                        {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.name)
+                        </td>
+                        <td>
+                            @foreach (var thing in item.investmentsIn)
+                            {
                                 @Html.DisplayFor(modelItem => thing.amount)<br />
-                                }
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                        {
+                            }
+                        </td>
+                        <td>
+                            @foreach (var thing in item.investmentsIn)
+                            {
                                 @Html.DisplayFor(modelItem => thing.date)<br />
-                                }
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                        {
+                            }
+                        </td>
+                        <td>
+                            @foreach (var thing in item.investmentsIn)
+                            {
                                 @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
+                            }
+                        </td>
+                        <td>
+                            @{  if (item.report != null)
+                                {
+                                    string reportID = Convert.ToString(item.report.ID);
+
+                                    @Html.ActionLink("View", reportID, "Details", "Report")
                                 }
-                    </td>
-                    <td>
-                        @{  if (item.report != null)
-                                    {
-                                        string reportID = Convert.ToString(item.report.ID);
-
-                                @Html.ActionLink("View", reportID, "Details", "Report")
+                                else
+                                {
+                                    //Default create report page right now
+                                    @Html.ActionLink("Create", "Create", "Report")
+                                }
+                            }
+                        </td>
+                    </tr>
                                     }
-                                    else
-                                    {
-                                        //Default create report page right now
-                                @Html.ActionLink("Create", "Create", "Report")
-                                    }
-                        }
-                    </td>
-                </tr>
-                                        }
-                                    }
-
-            </table>
-        </div>
+                                }
+        </table>
+                                }
+                                else
+                                {
+                                    <p>You Currently Have No Projects</p>
+                                }
+    </div>
