--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -69,8 +69,8 @@ button {
 }
 
 	footer {
-		text-align:center;
-		margin:auto;
+		text-align: center;
+		margin-top: 20px;
 		background-color: #92C337;
 		padding: 15px
 
