--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -15,6 +15,15 @@
         <h4>Investment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
+            </div>
+        </div>        
+        
         <div class="form-group">
             @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,6 +32,20 @@
             </div>
         </div>
 
+        <!---Needs to populate only projects from the signed in entity-->
+        <div class="form-group">
+            @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <select name="projectFrom_ID">
+                    <option value="0">No Project Selected</option>
+                    @foreach (var project in Model.Projects)
+                    {
+                        <option value=@project.ID>@project.name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(model => model.Investment.projectFrom_ID, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -38,30 +61,17 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <select name="projectTo_ID" id="ProjectToDropdown"></select>
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Investment.categories, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div id="CatList"></div>
                 <input name="categories" id="categories" type="hidden" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -83,40 +93,24 @@
             </div>
         </div>
 
-
-        <!--->Needs to populate only projects from the signed in entity-->
         <div class="form-group">
-            @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <select name="projectFrom_ID">
-                    <option value="0">No Project Selected</option>
-                    @foreach (var project in Model.Projects)
-                    {
-                        <option value=@project.ID>@project.name</option>
-                    }
-                </select>
-                @Html.ValidationMessageFor(model => model.Investment.projectFrom_ID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select name="projectTo_ID" id="ProjectToDropdown">
-                </select>
-            </div>
-        </div>
-
-
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+        <br />
     </div>
 }
 
-<div>
+<div class="addpadding">
     @Html.ActionLink("Back to List", "Index")
 </div>
 
