--- a/ImpactMap/Views/Account/Login.cshtml
+++ b/ImpactMap/Views/Account/Login.cshtml
@@ -37,10 +37,12 @@
                         <div class="col-md-10">
                             <input type="submit" value="Log in" class="btn btn-default button" />
                         </div>
+                        <br />
+                        
                     </div>
-                    <p>
+                    <div class="loginlink">
                         @Html.ActionLink("Register as a new user", "Register")
-                    </p>
+                    </div>
                     @* Enable this once you have account confirmation enabled for password reset functionality
                         <p>
                             @Html.ActionLink("Forgot your password?", "ForgotPassword")
