--- a/ImpactMap/Views/Categories/Edit.cshtml
+++ b/ImpactMap/Views/Categories/Edit.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
+        <h4>Tag</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -32,6 +32,6 @@
     </div>
 }
 
-<div>
+<div class="addpadding">
     @Html.ActionLink("Back to List", "Index")
 </div>
