--- a/ImpactMap/Views/Entities/Details.cshtml
+++ b/ImpactMap/Views/Entities/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Entity</h4>
+    <h4>Organization</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -84,7 +84,7 @@
 
     </dl>
 </div>
-<p>
+<p class="addpadding">
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
