--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿,,@model ImpactMap.Controllers.CategoryViewModel
+﻿@model ImpactMap.Controllers.CategoryViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Add Category</h4>
+        <h4>Tag</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -43,7 +43,7 @@
     </div>
 }
 
-<div>
+<div class="addpadding">
     @Html.ActionLink("Back to List", "Index")
 </div>
 
@@ -57,7 +57,7 @@
         function addMetrics() {
             if ($('#metrics').val() != "") {
                 newMetrics.push($('#metrics').val()); //pushes the metric into the newMetrics array
-                $('#displayMetrics').append('<span class="removeMetric" id="' + $('#metrics').val() + '">' + $('#metrics').val() + '<i class="fa fa-minus-circle" aria-hidden="true"></i></span><br>');//Adds the new metric to the display
+                $('#displayMetrics').append('<span class="removeMetric" id="' + $('#metrics').val() + '"><i class="fa fa-minus-circle" aria-hidden="true"></i>' + $('#metrics').val() + '</span><br>');//Adds the new metric to the display
                 $('#metrics').val("");//Clears the value of the input box to accept a new metric
                 $('#newMetrics').val(newMetrics.toString());//Converts newMetrics array to string and puts it into the hidden input
                 $('.removeMetric').click(function () { removeMetrics(this.id) });
