--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -53,4 +53,8 @@
                             }
                         }
 </table>
+
+    <div>
+        @Html.ActionLink("Back to Dashboard", "Index", "Dashboard")
+    </div>
 </div>
